// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AddReactionButton /> snapshot should match snapshot 1`] = `
<AddReactionButton>
  <ButtonCircle
    className="md-add-reaction-button-wrapper"
    size={20}
  >
    <ButtonSimple
      aria-pressed={false}
      className="md-button-circle-wrapper md-add-reaction-button-wrapper"
      data-color="primary"
      data-disabled={false}
      data-ghost={false}
      data-multiple-children={false}
      data-outline={false}
      data-selected={false}
      data-size={20}
      onClick={[Function]}
      onDragStart={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchCancel={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      type="button"
    >
      <FocusRing>
        <FocusRing
          focusClass="md-focus-ring-wrapper children"
          focusRingClass="md-focus-ring-wrapper children"
        >
          <button
            aria-pressed={false}
            className="md-button-circle-wrapper md-add-reaction-button-wrapper md-button-simple-wrapper"
            data-color="primary"
            data-disabled={false}
            data-ghost={false}
            data-multiple-children={false}
            data-outline={false}
            data-selected={false}
            data-size={20}
            onBlur={[Function]}
            onClick={[Function]}
            onDragStart={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchCancel={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            type="button"
          >
            <Icon
              name="reactions"
              scale={12}
            >
              <div
                className="md-icon-wrapper"
              >
                <svg
                  className=""
                  data-autoscale={false}
                  data-scale={12}
                  data-test="reactions"
                  fill="currentColor"
                  height="100%"
                  style={Object {}}
                  viewBox="0, 0, 32, 32"
                  width="100%"
                />
              </div>
            </Icon>
          </button>
        </FocusRing>
      </FocusRing>
    </ButtonSimple>
  </ButtonCircle>
</AddReactionButton>
`;

exports[`<AddReactionButton /> snapshot should match snapshot with className 1`] = `
<AddReactionButton
  className="example-class"
>
  <ButtonCircle
    className="example-class md-add-reaction-button-wrapper"
    size={20}
  >
    <ButtonSimple
      aria-pressed={false}
      className="md-button-circle-wrapper example-class md-add-reaction-button-wrapper"
      data-color="primary"
      data-disabled={false}
      data-ghost={false}
      data-multiple-children={false}
      data-outline={false}
      data-selected={false}
      data-size={20}
      onClick={[Function]}
      onDragStart={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchCancel={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      type="button"
    >
      <FocusRing>
        <FocusRing
          focusClass="md-focus-ring-wrapper children"
          focusRingClass="md-focus-ring-wrapper children"
        >
          <button
            aria-pressed={false}
            className="md-button-circle-wrapper example-class md-add-reaction-button-wrapper md-button-simple-wrapper"
            data-color="primary"
            data-disabled={false}
            data-ghost={false}
            data-multiple-children={false}
            data-outline={false}
            data-selected={false}
            data-size={20}
            onBlur={[Function]}
            onClick={[Function]}
            onDragStart={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchCancel={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            type="button"
          >
            <Icon
              name="reactions"
              scale={12}
            >
              <div
                className="md-icon-wrapper"
              >
                <svg
                  className=""
                  data-autoscale={false}
                  data-scale={12}
                  data-test="reactions"
                  fill="currentColor"
                  height="100%"
                  style={Object {}}
                  viewBox="0, 0, 32, 32"
                  width="100%"
                />
              </div>
            </Icon>
          </button>
        </FocusRing>
      </FocusRing>
    </ButtonSimple>
  </ButtonCircle>
</AddReactionButton>
`;

exports[`<AddReactionButton /> snapshot should match snapshot with id 1`] = `
<AddReactionButton
  id="example-id"
>
  <ButtonCircle
    className="md-add-reaction-button-wrapper"
    id="example-id"
    size={20}
  >
    <ButtonSimple
      aria-pressed={false}
      className="md-button-circle-wrapper md-add-reaction-button-wrapper"
      data-color="primary"
      data-disabled={false}
      data-ghost={false}
      data-multiple-children={false}
      data-outline={false}
      data-selected={false}
      data-size={20}
      id="example-id"
      onClick={[Function]}
      onDragStart={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchCancel={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      type="button"
    >
      <FocusRing>
        <FocusRing
          focusClass="md-focus-ring-wrapper children"
          focusRingClass="md-focus-ring-wrapper children"
        >
          <button
            aria-pressed={false}
            className="md-button-circle-wrapper md-add-reaction-button-wrapper md-button-simple-wrapper"
            data-color="primary"
            data-disabled={false}
            data-ghost={false}
            data-multiple-children={false}
            data-outline={false}
            data-selected={false}
            data-size={20}
            id="example-id"
            onBlur={[Function]}
            onClick={[Function]}
            onDragStart={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchCancel={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            type="button"
          >
            <Icon
              name="reactions"
              scale={12}
            >
              <div
                className="md-icon-wrapper"
              >
                <svg
                  className=""
                  data-autoscale={false}
                  data-scale={12}
                  data-test="reactions"
                  fill="currentColor"
                  height="100%"
                  style={Object {}}
                  viewBox="0, 0, 32, 32"
                  width="100%"
                />
              </div>
            </Icon>
          </button>
        </FocusRing>
      </FocusRing>
    </ButtonSimple>
  </ButtonCircle>
</AddReactionButton>
`;

exports[`<AddReactionButton /> snapshot should match snapshot with style 1`] = `
<AddReactionButton
  style={
    Object {
      "color": "pink",
    }
  }
>
  <ButtonCircle
    className="md-add-reaction-button-wrapper"
    size={20}
    style={
      Object {
        "color": "pink",
      }
    }
  >
    <ButtonSimple
      aria-pressed={false}
      className="md-button-circle-wrapper md-add-reaction-button-wrapper"
      data-color="primary"
      data-disabled={false}
      data-ghost={false}
      data-multiple-children={false}
      data-outline={false}
      data-selected={false}
      data-size={20}
      onClick={[Function]}
      onDragStart={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchCancel={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      style={
        Object {
          "color": "pink",
        }
      }
      type="button"
    >
      <FocusRing>
        <FocusRing
          focusClass="md-focus-ring-wrapper children"
          focusRingClass="md-focus-ring-wrapper children"
        >
          <button
            aria-pressed={false}
            className="md-button-circle-wrapper md-add-reaction-button-wrapper md-button-simple-wrapper"
            data-color="primary"
            data-disabled={false}
            data-ghost={false}
            data-multiple-children={false}
            data-outline={false}
            data-selected={false}
            data-size={20}
            onBlur={[Function]}
            onClick={[Function]}
            onDragStart={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchCancel={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            style={
              Object {
                "color": "pink",
              }
            }
            type="button"
          >
            <Icon
              name="reactions"
              scale={12}
            >
              <div
                className="md-icon-wrapper"
              >
                <svg
                  className=""
                  data-autoscale={false}
                  data-scale={12}
                  data-test="reactions"
                  fill="currentColor"
                  height="100%"
                  style={Object {}}
                  viewBox="0, 0, 32, 32"
                  width="100%"
                />
              </div>
            </Icon>
          </button>
        </FocusRing>
      </FocusRing>
    </ButtonSimple>
  </ButtonCircle>
</AddReactionButton>
`;
